ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vcas-ingress
spec:
  rules:
  - http:
      paths:
      - path: /cdan
        backend:
          serviceName: vcas-demo-svc
          servicePort: 80
