k8s-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcas-demo-svc
  namespace: default
spec:
  selector:
    app: vcas-demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vcas-demo-dep
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vcas-demo-app
  template:
    metadata:
      labels:
        app: vcas-demo-app
    spec:
      containers:
      - name: vcas-demo
        image: cdan/vcas-demo:$${GIT_COMMIT_ID}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: vcas-ir
  namespace: default
spec:
  virtualhost:
    fqdn: contour.cdan-test-c23cfd64-12dd-11e9-958c-0a8a1b3b0536.93a9beeb-d761-4551-bdba-e1f8b99fb995.vke-user.com
  routes:
    - match: /cdan
      #prefixRewrite: "/"
      services:
        - name: vcas-demo-svc
          port: 80
